Finish basic features

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,15 @@
 <resources>
 
     <string name="app_name">SpotSmile</string>
-    <string name="hello_world">Hello coc!</string>
-    <string name="action_settings">Settings</string>
+    <string name="spot_board_title">This is the sopt smile board</string>
+    <string name="toast_clicked_angry">Please click a happy face</string>
+    <string name="toast_clicked_happy">Yes! This is a happy face</string>
 
+    <string-array name="happy_face_list">
+        <item>@drawable/happy_face</item>
+    </string-array>
+
+    <string-array name="angry_face_list">
+        <item>@drawable/angry_face</item>
+    </string-array>
 </resources>
